--- a/Aurora/Aurora.vbproj
+++ b/Aurora/Aurora.vbproj
@@ -75,6 +75,12 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="localizaciones\frmListaLocalizacion.Designer.vb">
+      <DependentUpon>frmListaLocalizacion.vb</DependentUpon>
+    </Compile>
+    <Compile Include="localizaciones\frmListaLocalizacion.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmMysqlConnect.Designer.vb">
       <DependentUpon>frmMysqlConnect.vb</DependentUpon>
     </Compile>
@@ -112,6 +118,9 @@
     <Compile Include="clases\MySQLConexion.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="localizaciones\frmListaLocalizacion.resx">
+      <DependentUpon>frmListaLocalizacion.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMysqlConnect.resx">
       <DependentUpon>frmMysqlConnect.vb</DependentUpon>
     </EmbeddedResource>
