--- a/Aurora/Aurora.vbproj
+++ b/Aurora/Aurora.vbproj
@@ -75,6 +75,12 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="localizaciones\ejemploGRID.Designer.vb">
+      <DependentUpon>ejemploGRID.vb</DependentUpon>
+    </Compile>
+    <Compile Include="localizaciones\ejemploGRID.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="localizaciones\frmListaLocalizacion.Designer.vb">
       <DependentUpon>frmListaLocalizacion.vb</DependentUpon>
     </Compile>
@@ -118,6 +124,9 @@
     <Compile Include="clases\MySQLConexion.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="localizaciones\ejemploGRID.resx">
+      <DependentUpon>ejemploGRID.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="localizaciones\frmListaLocalizacion.resx">
       <DependentUpon>frmListaLocalizacion.vb</DependentUpon>
     </EmbeddedResource>
