--- a/Aurora/Aurora.vbproj
+++ b/Aurora/Aurora.vbproj
@@ -75,6 +75,12 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="localizaciones\frmEditarLocalizacion.Designer.vb">
+      <DependentUpon>frmEditarLocalizacion.vb</DependentUpon>
+    </Compile>
+    <Compile Include="localizaciones\frmEditarLocalizacion.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="localizaciones\ejemploGRID.Designer.vb">
       <DependentUpon>ejemploGRID.vb</DependentUpon>
     </Compile>
@@ -127,9 +133,13 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="clases\MySQLConexion.vb" />
+    <Compile Include="api\MySQLConexion.vb" />
+    <Compile Include="api\MySQL.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="localizaciones\frmEditarLocalizacion.resx">
+      <DependentUpon>frmEditarLocalizacion.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="localizaciones\ejemploGRID.resx">
       <DependentUpon>ejemploGRID.vb</DependentUpon>
     </EmbeddedResource>
