--- a/Aurora/Aurora.vbproj
+++ b/Aurora/Aurora.vbproj
@@ -75,6 +75,12 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="equipos\frmAddEquipo.Designer.vb">
+      <DependentUpon>frmAddEquipo.vb</DependentUpon>
+    </Compile>
+    <Compile Include="equipos\frmAddEquipo.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="localizaciones\frmEditarLocalizacion.Designer.vb">
       <DependentUpon>frmEditarLocalizacion.vb</DependentUpon>
     </Compile>
@@ -137,6 +143,9 @@
     <Compile Include="api\MySQL.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="equipos\frmAddEquipo.resx">
+      <DependentUpon>frmAddEquipo.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="localizaciones\frmEditarLocalizacion.resx">
       <DependentUpon>frmEditarLocalizacion.vb</DependentUpon>
     </EmbeddedResource>
@@ -192,6 +201,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="aurora.ico" />
+    <None Include="Resources\map_delete.png" />
+    <None Include="Resources\map_edit.png" />
+    <None Include="Resources\map_add.png" />
+    <None Include="Resources\server_add.ico" />
     <None Include="Resources\help.png" />
   </ItemGroup>
   <ItemGroup>
