--- a/Aurora/Aurora.vbproj
+++ b/Aurora/Aurora.vbproj
@@ -75,10 +75,29 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="api\loaders.vb" />
+    <Compile Include="equipos\frmEditarEquipo.Designer.vb">
+      <DependentUpon>frmEditarEquipo.vb</DependentUpon>
+    </Compile>
+    <Compile Include="equipos\frmEditarEquipo.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="equipos\frmAddEquipo.Designer.vb">
       <DependentUpon>frmAddEquipo.vb</DependentUpon>
     </Compile>
     <Compile Include="equipos\frmAddEquipo.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="equipos\frmListarEquipos.Designer.vb">
+      <DependentUpon>frmListarEquipos.vb</DependentUpon>
+    </Compile>
+    <Compile Include="equipos\frmListarEquipos.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="equipos\frmVerEquipo.Designer.vb">
+      <DependentUpon>frmVerEquipo.vb</DependentUpon>
+    </Compile>
+    <Compile Include="equipos\frmVerEquipo.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="localizaciones\frmEditarLocalizacion.Designer.vb">
@@ -143,8 +162,14 @@
     <Compile Include="api\MySQL.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="equipos\frmEditarEquipo.resx">
+      <DependentUpon>frmEditarEquipo.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="equipos\frmAddEquipo.resx">
       <DependentUpon>frmAddEquipo.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="equipos\frmVerEquipo.resx">
+      <DependentUpon>frmVerEquipo.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="localizaciones\frmEditarLocalizacion.resx">
       <DependentUpon>frmEditarLocalizacion.vb</DependentUpon>
@@ -201,6 +226,21 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="aurora.ico" />
+    <None Include="Resources\server_uncompressed.png" />
+    <None Include="Resources\server_link.png" />
+    <None Include="Resources\server_lightning.png" />
+    <None Include="Resources\server_key.png" />
+    <None Include="Resources\server_go.png" />
+    <None Include="Resources\server_error.png" />
+    <None Include="Resources\server_edit.png" />
+    <None Include="Resources\server_delete.png" />
+    <None Include="Resources\server_database.png" />
+    <None Include="Resources\server_connect.png" />
+    <None Include="Resources\server_compressed.png" />
+    <None Include="Resources\server_chart.png" />
+    <None Include="Resources\server1.png" />
+    <None Include="Resources\bug.png" />
+    <None Include="Resources\magnifier.png" />
     <None Include="Resources\map_delete.png" />
     <None Include="Resources\map_edit.png" />
     <None Include="Resources\map_add.png" />
